# virtualization_project

./: .gitignore  CMakeLists.txt  README.md
cpp/include/: vm_bridge.h
cpp/src/: main.cpp
docs/: PROCESS_VM_EXTENSIBILITY.md
examples/: sample_add_exit.bc  sample_trap.bc
rust/vm_core/: Cargo.toml
rust/vm_core/src/: lib.rs  vm.rs
tools/: make_sample_bytecode.py
